facicon Icon add

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,7 +11,7 @@
     href="https://fonts.googleapis.com/css2?family=Playwrite+AU+TAS&family=Poppins:wght@300;500;600;700&display=swap"
     rel="stylesheet">
   <!-- Favicon Link -->
-  <link rel="shortcut icon" href="/src/img/icon/Favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/src/images/icon/Favicon.png" type="image/x-icon">
   <!-- Link Output Css -->
   <link rel="stylesheet" href="/src/style.css">
   <title>FD</title>
