complets Index html style oll fixd codes

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,8 +19,8 @@
 
 <body class="font-primary">
 
-  <header id="header" class="bg-primary">
-    <div class="max-w-[1400px] mx-auto flex justify-between items-center py-8 px-4 relative">
+  <header id="header" class="">
+    <div class="bg-primary max-w-[1440px] mx-auto flex justify-between items-center py-8 px-4 relative">
       <!-- logo -->
       <img src="/src/images/brandLogo.png" alt="" class="w-22 lg:w-30">
       <!-- Navigation Manu -->
@@ -77,8 +77,8 @@
   </header>
 
   <!-- Hero Area -->
-  <section id="hero_area" class="bg-primary">
-    <div class="max-w-[1400px] mx-auto align-middle flex-row justify-between items-center sm:flex">
+  <section id="hero_area">
+    <div class="bg-primary max-w-[1440px] mx-auto align-middle flex-row justify-between items-center sm:flex">
       <!-- left -->
       <div class="text-center sm:w-1/2">
         <h2 class="text-2xl lg:text-4xl lg:mb-4">Rocket single seater</h2>
@@ -94,8 +94,9 @@
   </section>
 
   <!-- Side table -->
-  <section id="side-table" class="bg-dripRed100 py-16">
-    <div class="max-w-[1440px] mx-auto flex flex-col text-center sm:flex-row sm:justify-between sm:items-center gap-12">
+  <section id="side-table" class="">
+    <div
+      class="bg-dripRed100 max-w-[1440px] mx-auto flex flex-col text-center sm:flex-row sm:justify-between sm:items-center gap-12 rounded-b-sm">
 
       <!-- Left -->
       <div class="flex-1 sm:mb-10">
@@ -121,8 +122,8 @@
 
   <!-- Shop Area -->
 
-  <section class="py-10 px-3">
-    <div class="max-w-[1400px] mx-auto">
+  <section class="py-10">
+    <div class="max-w-[1440px] mx-auto px-2">
       <div class="text-center text-2xl pb-10">
         <h2 class="mb-2">Top Picks For You</h2>
         <p>Find a bright ideal to suit your taste with our great selection of suspension, floor and table lights.</p>
@@ -173,8 +174,8 @@
 
   <!-- New Arrivols -->
 
-  <section class="bg-src">
-    <div class="max-w-[1400px] mx-auto paddingXl flex flex-col justify-around items-center sm:flex-row">
+  <section>
+    <div class="bg-src max-w-[1440px] mx-auto px-2 paddingXl flex flex-col justify-around items-center sm:flex-row">
 
       <!-- left -->
       <div class="sm:w-1/2">
@@ -192,6 +193,178 @@
 
     </div>
   </section>
+
+  <!-- Blogs Sectiotn-->
+  <section>
+    <div class="max-w-[1440px] mx-auto py-10 px-2">
+
+      <!-- title and subtitle -->
+      <div class="text-center text-2xl pb-10">
+        <h2 class="mb-2">Our Blogs</h2>
+        <p>Find a bright ideal to suit your taste with our great selection</p>
+      </div>
+
+      <div class="grid items-center justify-center gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3">
+
+        <!-- Itmes 1 -->
+        <div class="mx-auto text-center">
+          <div>
+            <img src="/src/images/blogsimg1.png" alt="images">
+          </div>
+          <div class=" py-4">
+            <h6>Going all-in with millennial design</h6>
+            <p class="py-4"><a href="#" type="btn"
+                class="border-b-2 border-gray-900 text-2xl text-black hover:border-r-amber-600 hover:text-amber-500 transition-colors">Read
+                More</a>
+            </p>
+
+            <div class="flex items-center justify-center gap-5">
+              <div class="flex">
+                <img src="/src/images/icon/blogsicons2.png" alt="images">
+                <h6>5 Min</h6>
+              </div>
+              <div class="flex gap-1">
+                <img src="/src/images/icon/blogsicons1.png" alt="images">
+                <h6>12th Oct 2022</h6>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <!-- Itmes 2 -->
+        <div class="mx-auto text-center">
+          <div>
+            <img src="/src/images/blogsimg2.png" alt="images">
+          </div>
+          <div class=" py-4">
+            <h6>Going all-in with millennial design</h6>
+            <p class="py-4"><a href="#" type="btn"
+                class="border-b-2 border-gray-900 text-2xl text-black hover:border-r-amber-600 hover:text-amber-500 transition-colors">Read
+                More</a>
+            </p>
+
+            <div class="flex items-center justify-center gap-5">
+              <div class="flex">
+                <img src="/src/images/icon/blogsicons2.png" alt="images">
+                <h6>5 Min</h6>
+              </div>
+              <div class="flex gap-1">
+                <img src="/src/images/icon/blogsicons1.png" alt="images">
+                <h6>12th Oct 2022</h6>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <!-- Itmes 3 -->
+        <div class="mx-auto text-center">
+          <div>
+            <img src="/src/images/blogsimg3.png" alt="images">
+          </div>
+          <div class=" py-4">
+            <h6>Going all-in with millennial design</h6>
+            <p class="py-4"><a href="#" type="btn"
+                class="border-b-2 border-gray-900 text-2xl text-black hover:border-r-amber-600 hover:text-amber-500 transition-colors">Read
+                More</a>
+            </p>
+
+            <div class="flex items-center justify-center gap-5">
+              <div class="flex">
+                <img src="/src/images/icon/blogsicons2.png" alt="images">
+                <h6>5 Min</h6>
+              </div>
+              <div class="flex gap-1">
+                <img src="/src/images/icon/blogsicons1.png" alt="images">
+                <h6>12th Oct 2022</h6>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+
+      <!-- View All Post  -->
+      <div class="text-center">
+        <p class="py-4"><a href="#" type="btn"
+            class="border-b-2 border-gray-900 text-2xl text-black hover:border-r-amber-600 hover:text-amber-500 transition-colors">View
+            All Post</a>
+        </p>
+      </div>
+
+    </div>
+  </section>
+
+
+  <!-- Our Instagram Link -->
+  <section>
+    <div class="relative max-w-[1440px] mx-auto py-10 px-2">
+
+      <!-- Background Image -->
+      <img src="/src/images/ourInstagramBgimg.png"
+        class="absolute inset-0 w-full h-[500px] object-cover z-0 rounded-sm" />
+
+      <!-- Content Center -->
+      <div class=" flex items-center justify-center h-[50vh] flex-col
+                z-50 text-center bg-white/10 backdrop-blur-sm p-6 rounded-lg">
+        <h2 class="text-3xl font-bold mb-2">Our Instagram</h2>
+        <p class="mb-4 text-lg">Follow our store on Instagram</p>
+        <button class="bg-pink-200 py-2 px-6 text-[18px] rounded-md shadow-2xl hover:bg-pink-100 cursor-pointer">
+          Follow Us
+        </button>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Footer Area -->
+
+  <footer class="py-5">
+    <div class="max-w-[1440px] mx-auto px-2">
+
+      <div class="grid items-center justify-center gap-5 sm:grid-cols-3 lg:grid-cols-3">
+
+        <!-- left  -->
+        <div>
+          <p>400 University Drive Suite 200 Coral <br> Gables,
+            <br> FL 33134 USA
+          </p>
+        </div>
+
+        <!-- itmes 2 -->
+        <div class="flex flex-col sm:items-center sm:justify-center">
+          <ul>
+            <li class="mb-4"><a href="#">Home</a></li>
+            <li class="mb-4"><a href="#">About</a></li>
+            <li class="mb-4"><a href="#">Links</a></li>
+            <li class="mb-4"><a href="#">Shop</a></li>
+            <li class="mb-4"><a href="#">Contact</a></li>
+          </ul>
+        </div>
+
+        <!-- items 3 -->
+        <div class="flex flex-col sm:items-center sm:justify-center">
+          <ul>
+            <li class="mb-4"><a href="#">Help</a></li>
+            <li class="mb-4"><a href="#">Payment Options</a></li>
+            <li class="mb-4"><a href="#">Returns</a></li>
+            <li class="mb-4"><a href="#">Privacy Policies</a></li>
+          </ul>
+        </div>
+
+      </div>
+
+      <!-- items 4 -->
+      <div class="flex justify-center items-center flex-col">
+        <p class="mb-4 text-2xl text-left">Newsletter</p>
+        <div class="flex gap-2">
+          <input type="email" placeholder="Enter Your Email Address" class="border-b-2 border-gray-800 outline-none ">
+          <button class="cursor-pointer border-b-2 border-gray-900">SUBSCRIBE</button>
+        </div>
+      </div>
+
+    </div>
+  </footer>
 
 
   <!-- Link Javascript  -->
