Upload master branch

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     href="https://fonts.googleapis.com/css2?family=Playwrite+AU+TAS&family=Poppins:wght@300;500;600;700&display=swap"
     rel="stylesheet">
   <!-- Favicon Link -->
-  <link rel="shortcut icon" href="/src/images/icon/Favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="src/images/icon/Favicon.png" type="image/x-icon">
   <!-- Link Output Css -->
-  <link rel="stylesheet" href="/src/style.css">
+  <link rel="stylesheet" href="src/style.css">
   <title>FD</title>
 </head>
 
@@ -22,7 +22,7 @@
   <header id="header" class="">
     <div class="bg-primary max-w-[1440px] mx-auto flex justify-between items-center py-8 px-4 relative">
       <!-- logo -->
-      <img src="/src/images/brandLogo.png" alt="" class="w-22 lg:w-30">
+      <img src="src/images/brandLogo.png" alt="" class="w-22 lg:w-30">
       <!-- Navigation Manu -->
       <nav>
         <ul
@@ -88,7 +88,7 @@
       </div>
       <!-- right -->
       <div class="sm:w-1/2">
-        <img src="/src/images/heroRightPng.png" alt="Img">
+        <img src="src/images/heroRightPng.png" alt="Img">
       </div>
     </div>
   </section>
@@ -100,7 +100,7 @@
 
       <!-- Left -->
       <div class="flex-1 sm:mb-10">
-        <img src="/src/images/table2.png" alt="Side table" class="mx-auto w-[300px] sm:w-[350px]">
+        <img src="src/images/table2.png" alt="Side table" class="mx-auto w-[300px] sm:w-[350px]">
         <h2 class="text-2xl font-semibold mt-8">Side Table</h2>
         <p class="mt-2">
           <a href="#" class="border-b-2 border-gray-600 hover:text-amber-500 transition-colors duration-300">View
@@ -109,7 +109,7 @@
       </div>
       <!-- Right -->
       <div class="flex-1">
-        <img src="/src/images/table 1.png" alt="Side table" class="mx-auto w-[300px] sm:w-[350px]">
+        <img src="src/images/table 1.png" alt="Side table" class="mx-auto w-[300px] sm:w-[350px]">
         <h2 class="text-2xl font-semibold mt-8">Side Table</h2>
         <p class="mt-2">
           <a href="#" class="border-b-2 border-gray-600 hover:text-amber-500 transition-colors duration-300">View
@@ -132,28 +132,28 @@
       <div class="grid grid-cols-1 gap-6 sm:grid-cols-3 lg:grid-cols-4 justify-items-center">
 
         <div class="sm:w-[300px] rounded-lg">
-          <img src="/src/images/prodact1.png" alt="" class="w-[280px] mx-auto">
+          <img src="src/images/prodact1.png" alt="" class="w-[280px] mx-auto">
           <div class="text-center">
             <p>Trenton modular sofa_3</p>
             <h2>Rs.25,000.00</h2>
           </div>
         </div>
         <div class="sm:w-[300px] rounded-lg">
-          <img src="/src/images/prodact1.png" alt="" class="w-[280px] mx-auto">
+          <img src="src/images/prodact1.png" alt="" class="w-[280px] mx-auto">
           <div class="text-center">
             <p>Trenton modular sofa_3</p>
             <h2>Rs.25,000.00</h2>
           </div>
         </div>
         <div class="sm:w-[300px] rounded-lg">
-          <img src="/src/images/prodact1.png" alt="" class="w-[280px] mx-auto">
+          <img src="src/images/prodact1.png" alt="" class="w-[280px] mx-auto">
           <div class="text-center">
             <p>Trenton modular sofa_3</p>
             <h2>Rs.25,000.00</h2>
           </div>
         </div>
         <div class="sm:w-[300px] rounded-lg ">
-          <img src="/src/images/prodact1.png" alt="" class="w-[280px] mx-auto">
+          <img src="src/images/prodact1.png" alt="" class="w-[280px] mx-auto">
           <div class="text-center">
             <p>Trenton modular sofa_3</p>
             <h2>Rs.25,000.00</h2>
@@ -179,7 +179,7 @@
 
       <!-- left -->
       <div class="sm:w-1/2">
-        <img src="/src/images/Asgaard sofa 1.png" alt="images">
+        <img src="src/images/Asgaard sofa 1.png" alt="images">
       </div>
 
       <!-- Right -->
@@ -209,7 +209,7 @@
         <!-- Itmes 1 -->
         <div class="mx-auto text-center">
           <div>
-            <img src="/src/images/blogsimg1.png" alt="images">
+            <img src="src/images/blogsimg1.png" alt="images">
           </div>
           <div class=" py-4">
             <h6>Going all-in with millennial design</h6>
@@ -220,11 +220,11 @@
 
             <div class="flex items-center justify-center gap-5">
               <div class="flex">
-                <img src="/src/images/icon/blogsicons2.png" alt="images">
+                <img src="src/images/icon/blogsicons2.png" alt="images">
                 <h6>5 Min</h6>
               </div>
               <div class="flex gap-1">
-                <img src="/src/images/icon/blogsicons1.png" alt="images">
+                <img src="src/images/icon/blogsicons1.png" alt="images">
                 <h6>12th Oct 2022</h6>
               </div>
             </div>
@@ -234,7 +234,7 @@
         <!-- Itmes 2 -->
         <div class="mx-auto text-center">
           <div>
-            <img src="/src/images/blogsimg2.png" alt="images">
+            <img src="src/images/blogsimg2.png" alt="images">
           </div>
           <div class=" py-4">
             <h6>Going all-in with millennial design</h6>
@@ -245,11 +245,11 @@
 
             <div class="flex items-center justify-center gap-5">
               <div class="flex">
-                <img src="/src/images/icon/blogsicons2.png" alt="images">
+                <img src="src/images/icon/blogsicons2.png" alt="images">
                 <h6>5 Min</h6>
               </div>
               <div class="flex gap-1">
-                <img src="/src/images/icon/blogsicons1.png" alt="images">
+                <img src="src/images/icon/blogsicons1.png" alt="images">
                 <h6>12th Oct 2022</h6>
               </div>
             </div>
@@ -259,7 +259,7 @@
         <!-- Itmes 3 -->
         <div class="mx-auto text-center">
           <div>
-            <img src="/src/images/blogsimg3.png" alt="images">
+            <img src="src/images/blogsimg3.png" alt="images">
           </div>
           <div class=" py-4">
             <h6>Going all-in with millennial design</h6>
@@ -270,11 +270,11 @@
 
             <div class="flex items-center justify-center gap-5">
               <div class="flex">
-                <img src="/src/images/icon/blogsicons2.png" alt="images">
+                <img src="src/images/icon/blogsicons2.png" alt="images">
                 <h6>5 Min</h6>
               </div>
               <div class="flex gap-1">
-                <img src="/src/images/icon/blogsicons1.png" alt="images">
+                <img src="src/images/icon/blogsicons1.png" alt="images">
                 <h6>12th Oct 2022</h6>
               </div>
             </div>
@@ -301,7 +301,7 @@
     <div class="relative max-w-[1440px] mx-auto py-10 px-2">
 
       <!-- Background Image -->
-      <img src="/src/images/ourInstagramBgimg.png"
+      <img src="src/images/ourInstagramBgimg.png"
         class="absolute inset-0 w-full h-[500px] object-cover z-0 rounded-sm" />
 
       <!-- Content Center -->
@@ -368,7 +368,7 @@
 
 
   <!-- Link Javascript  -->
-  <script src="/src/js/script.js"></script>
+  <script src="src/js/script.js"></script>
 
 </body>
 
