All fix websit bags index.html file a new img add

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <!-- Side table -->
   <section id="side-table" class="">
     <div
-      class="bg-dripRed100 max-w-[1440px] mx-auto flex flex-col text-center sm:flex-row sm:justify-between sm:items-center gap-12 rounded-b-sm">
+      class="bg-dripRed100 max-w-[1440px] mx-auto py-6 flex flex-col text-center sm:flex-row sm:justify-between sm:items-center gap-12 rounded-b-sm">
 
       <!-- Left -->
       <div class="flex-1 sm:mb-10">
@@ -139,24 +139,24 @@
           </div>
         </div>
         <div class="sm:w-[300px] rounded-lg">
-          <img src="src/images/prodact1.png" alt="" class="w-[280px] mx-auto">
+          <img src="src/images/toppicksimg2.png" alt="" class="w-[280px] mx-auto">
           <div class="text-center">
-            <p>Trenton modular sofa_3</p>
-            <h2>Rs.25,000.00</h2>
+            <p>Granite dining table with dining chair</p>
+            <h2>Rs.27,457.00</h2>
           </div>
         </div>
         <div class="sm:w-[300px] rounded-lg">
-          <img src="src/images/prodact1.png" alt="" class="w-[280px] mx-auto">
+          <img src="src/images/toppicksimg3.png" alt="" class="w-[280px] mx-auto">
           <div class="text-center">
-            <p>Trenton modular sofa_3</p>
-            <h2>Rs.25,000.00</h2>
+            <p>Outdoor bar table and stool</p>
+            <h2>Rs.31,070.00</h2>
           </div>
         </div>
         <div class="sm:w-[300px] rounded-lg ">
-          <img src="src/images/prodact1.png" alt="" class="w-[280px] mx-auto">
+          <img src="src/images/toppicksimg4.png" alt="" class="w-[280px] mx-auto">
           <div class="text-center">
-            <p>Trenton modular sofa_3</p>
-            <h2>Rs.25,000.00</h2>
+            <p>Plain console with teak mirror</p>
+            <h2>Rs.21,002.01</h2>
           </div>
         </div>
       </div>
@@ -196,7 +196,7 @@
 
   <!-- Blogs Sectiotn-->
   <section>
-    <div class="max-w-[1440px] mx-auto py-10 px-2">
+    <div class="max-w-[1440px] mx-auto py-10 px-3">
 
       <!-- title and subtitle -->
       <div class="text-center text-2xl pb-10">
@@ -302,7 +302,7 @@
 
       <!-- Background Image -->
       <img src="src/images/ourInstagramBgimg.png"
-        class="absolute inset-0 w-full h-[500px] object-cover z-0 rounded-sm" />
+        class="absolute inset-0 w-full h-[300px] object-cover z-0 rounded-sm sm:h-[500px]" />
 
       <!-- Content Center -->
       <div class=" flex items-center justify-center h-[50vh] flex-col
@@ -320,7 +320,7 @@
   <!-- Footer Area -->
 
   <footer class="py-5">
-    <div class="max-w-[1440px] mx-auto px-2">
+    <div class="max-w-[1440px] mx-auto px-2 shadow-2xl mt-4 sm:shadow-none sm:mt-0">
 
       <div class="grid items-center justify-center gap-5 sm:grid-cols-3 lg:grid-cols-3">
 
@@ -357,9 +357,9 @@
       <!-- items 4 -->
       <div class="flex justify-center items-center flex-col">
         <p class="mb-4 text-2xl text-left">Newsletter</p>
-        <div class="flex gap-2">
+        <div class="flex flex-col gap-2 sm:flex-row">
           <input type="email" placeholder="Enter Your Email Address" class="border-b-2 border-gray-800 outline-none ">
-          <button class="cursor-pointer border-b-2 border-gray-900">SUBSCRIBE</button>
+          <button class="cursor-pointer sm:border-b-2 sm:border-gray-900">SUBSCRIBE</button>
         </div>
       </div>
 
