Feat: Add shop section

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           class="hidden absolute flex-row bg-violet-300 w-full top-20 left-0 py-4 uppercase sm:flex sm:relative sm:top-0 sm:bg-transparent">
           <li class="mb-2 pl-4 hover:bg-violet-500 sm:hover:bg-transparent transition-colors"><a href="#"
               class="font-medium hover:text-white">Home</a></li>
-          <li class="mb-2 pl-4 hover:bg-violet-500 sm:hover:bg-transparent transition-colors"><a href="#"
-              class="font-medium hover:text-white">Shop</a></li>
+          <li class="mb-2 pl-4 hover:bg-violet-500 sm:hover:bg-transparent transition-colors"><a
+              href="/src/pages/shop.html" class="font-medium hover:text-white">Shop</a></li>
           <li class="mb-2 pl-4 hover:bg-violet-500 sm:hover:bg-transparent transition-colors"><a href="#"
               class="font-medium hover:text-white">About</a></li>
           <li class="mb-0 pl-4  hover:bg-violet-500 sm:hover:bg-transparent transition-colors"><a href="#"
@@ -163,7 +163,7 @@
 
       <!-- btn View More -->
       <div class="flex items-center justify-center gap-2 pt-10 text-black">
-        <a href="#" class="border-b-2 hover:text-amber-500">View More</a>
+        <a href="/src/pages/shop.html" class="border-b-2 hover:text-amber-500">View More</a>
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
           class="size-6">
           <path stroke-linecap="round" stroke-linejoin="round"
