--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -24,23 +24,25 @@
     <div class="containers flex justify-between items-center px-2 py-5 sm:py-4">
 
       <!-- left sections -->
-      <div></div>
+      <div>
+        <img src="/src/images/brandLogo.png" alt="" class="w-30">
+      </div>
 
       <!-- Medel sections -->
       <nav>
         <ul id="mobileManu"
-          class=" absolute backdrop-blur-md bg-amber-200/20 top-16 left-full w-full h-screen text-center transition-all duration-300 z-50 sm:sticky sm:bg-transparent sm:flex sm:mt-4 sm:left-0 sm:h-auto">
-          <li class="mb-5 mt-5 sm:mt-0"><a href="/index.html"
-              class="text-2xl bg-green-400 py-1 px-4 rounded-lg text-white hover:bg-green-500 transition-colors sm:bg-transparent sm:text-black sm:font-semibold sm:hover:bg-transparent sm:hover:text-amber-500">Home</a>
+          class=" mt-1 absolute backdrop-blur-md bg-gray-900 top-16 left-full right-1 w-[90%] mx-auto transition-all duration-300 z-50 px-10 rounded-lg sm:sticky sm:bg-transparent sm:flex sm:mt-4 sm:left-0 sm:h-auto sm:right-0 sm:gap-6 sm:text-[18px] lg:text-2xl">
+          <li class="mb-2 boderBottom sm:border-none mt-5 sm:mt-0"><a href="/index.html"
+              class="transition-colors text-white font-medium sm:bg-transparent sm:text-black sm:font-semibold sm:hover:bg-transparent sm:hover:text-amber-500">Home</a>
           </li>
-          <li class="mb-5"><a href="#"
-              class="text-2xl bg-green-400 py-1 px-4 rounded-lg text-white hover:bg-green-500 transition-colors sm:bg-transparent sm:text-black sm:font-semibold sm:hover:bg-transparent sm:hover:text-amber-500">Shop</a>
+          <li class="mb-2 boderBottom sm:border-none"><a href="#"
+              class="transition-colors text-white font-medium sm:bg-transparent sm:text-black sm:font-semibold sm:hover:bg-transparent sm:hover:text-amber-500">Shop</a>
           </li>
-          <li class="mb-5"><a href="#"
-              class="text-2xl bg-green-400 py-1 px-4 rounded-lg text-white hover:bg-green-500 transition-colors sm:bg-transparent sm:text-black sm:font-semibold sm:hover:bg-transparent sm:hover:text-amber-500">About</a>
+          <li class="mb-2 boderBottom sm:border-none"><a href="#"
+              class="transition-colors text-white font-medium sm:bg-transparent sm:text-black sm:font-semibold sm:hover:bg-transparent sm:hover:text-amber-500">About</a>
           </li>
-          <li class="mb-5"><a href="#"
-              class="text-2xl bg-green-400 py-1 px-4 rounded-lg text-white hover:bg-green-500 transition-colors sm:bg-transparent sm:text-black sm:font-semibold sm:hover:bg-transparent sm:hover:text-amber-500">contact</a>
+          <li class="mb-5 boderBottom sm:border-none"><a href="#"
+              class="transition-colors text-white font-medium sm:bg-transparent sm:text-black sm:font-semibold sm:hover:bg-transparent sm:hover:text-amber-500">contact</a>
           </li>
         </ul>
       </nav>
