Feat: index.html file link add shop.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <!-- left -->
       <div class="text-center sm:w-1/2">
         <h2 class="text-2xl lg:text-4xl lg:mb-4">Rocket single seater</h2>
-        <p><a href="#"
+        <p><a href="/src/pages/shop.html"
             class="text-2xl border-b-2 hover:text-amber-400 hover:border-b-2 hover:border-amber-600 rounded-sm">Shop
             Now</a></p>
       </div>
@@ -120,7 +120,8 @@
         <img src="src/images/table2.png" alt="Side table" class="mx-auto w-[300px] sm:w-[350px]">
         <h2 class="text-2xl font-semibold mt-8">Side Table</h2>
         <p class="mt-2">
-          <a href="#" class="border-b-2 border-gray-600 hover:text-amber-500 transition-colors duration-300">View
+          <a href="/src/pages/shop.html"
+            class="border-b-2 border-gray-600 hover:text-amber-500 transition-colors duration-300">View
             More</a>
         </p>
       </div>
@@ -129,7 +130,8 @@
         <img src="src/images/table 1.png" alt="Side table" class="mx-auto w-[300px] sm:w-[350px]">
         <h2 class="text-2xl font-semibold mt-8">Side Table</h2>
         <p class="mt-2">
-          <a href="#" class="border-b-2 border-gray-600 hover:text-amber-500 transition-colors duration-300">View
+          <a href="/src/pages/shop.html"
+            class="border-b-2 border-gray-600 hover:text-amber-500 transition-colors duration-300">View
             More</a>
         </p>
       </div>
