add: account.html , contact.html, singleproduct.html and image lode conplets

--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -41,7 +41,7 @@
           <li class="mb-2 boderBottom sm:border-none"><a href="#"
               class="transition-colors text-white font-medium sm:bg-transparent sm:text-black sm:font-semibold sm:hover:bg-transparent sm:hover:text-amber-500">About</a>
           </li>
-          <li class="mb-5 boderBottom sm:border-none"><a href="#"
+          <li class="mb-5 boderBottom sm:border-none"><a href="/src/pages/contact.html"
               class="transition-colors text-white font-medium sm:bg-transparent sm:text-black sm:font-semibold sm:hover:bg-transparent sm:hover:text-amber-500">contact</a>
           </li>
         </ul>
@@ -49,7 +49,7 @@
 
       <!-- Right sections -->
       <div class="flex items-center justify-center gap-x-5">
-        <a href=""><img src="/src/images/icon/navicons1.png" alt="icons"></a>
+        <a href="/src/pages/account.html"><img src="/src/images/icon/navicons1.png" alt="icons"></a>
         <a href=""><img src="/src/images/icon/navicons2.png" alt="icons"></a>
         <a href=""><img src="/src/images/icon/navicons3.png" alt="icons"></a>
         <a href=""><img src="/src/images/icon/navicons4.png" alt="icons"></a>
