--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           <li class="mb-2 boderBottom sm:border-none"><a href="/src/pages/shop.html"
               class="transition-colors text-white font-medium sm:bg-transparent sm:text-black sm:font-semibold sm:hover:bg-transparent sm:hover:text-amber-500">Shop</a>
           </li>
-          <li class="mb-2 boderBottom sm:border-none"><a href="#"
+          <li class="mb-2 boderBottom sm:border-none"><a href=""
               class="transition-colors text-white font-medium sm:bg-transparent sm:text-black sm:font-semibold sm:hover:bg-transparent sm:hover:text-amber-500">About</a>
           </li>
-          <li class="mb-5 boderBottom sm:border-none"><a href="#"
+          <li class="mb-5 boderBottom sm:border-none"><a href="src/pages/contact.html"
               class="transition-colors text-white font-medium sm:bg-transparent sm:text-black sm:font-semibold sm:hover:bg-transparent sm:hover:text-amber-500">contact</a>
           </li>
         </ul>
@@ -45,12 +45,14 @@
 
       <!-- Icon -->
       <div class="flex items-center gap-3">
-        <p class="cursor-pointer text-black"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-            stroke-width="1.5" stroke="currentColor" class="size-6">
-            <path stroke-linecap="round" stroke-linejoin="round"
-              d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
-          </svg>
-        </p>
+        <a href="/src/pages/account.html">
+          <p class="cursor-pointer text-black"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+              stroke-width="1.5" stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
+            </svg>
+          </p>
+        </a>
         <!-- 2 -->
         <p class="cursor-pointer text-black"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
             stroke-width="1.5" stroke="currentColor" class="size-6">
